Fixes bug 260209: Debug macros (NS_ASSERTION etc.) not followed by a ';' should produce a compiler error also in non-debug builds.  Patch by Dr. Hans-Andreas Engel. r=dougt, sr=Henry.Jia@sun.com.